--- a/veiculos/cssHeader/body.css
+++ b/veiculos/cssHeader/body.css
@@ -1,3 +1,7 @@
+body{
+    overflow-x: hidden;
+}
+
 #infoVeiculo{
     height: 200px;
     display: flex;
@@ -17,6 +21,7 @@
     background-color: rgb(0, 20, 45,0.5);
 }
 
+
 #veiculoCores{
     display: flex;
     flex-direction: column;
@@ -26,6 +31,7 @@
     padding-bottom: 100px;
     color: white;
     gap: 30px;
+   
 }
 
 #imgCorVeiculo{
@@ -35,6 +41,10 @@
 
 #textoCores{
     font-size: 50px;
+}
+
+#maisDetalhes{
+    padding: 5px;
 }
 
 #cabecalhoCores{
@@ -58,6 +68,10 @@
     border-radius: 100px;
 }
 
+#coresDisponiveis:hover{
+    cursor: pointer;
+}
+
 #detalhesVeiculos{
     background-color: rgb(0, 20, 45);
     padding-top: 100px;
@@ -65,6 +79,7 @@
     flex-wrap: wrap;
     gap: 200px;
     justify-content: center;
+    padding-bottom: 100px;
 }
 
 .cadaDetalhe{
@@ -81,4 +96,10 @@
 
 .cadaDetalhe img{
    width: 400px;
+   border-radius: 10px;
 }
+
+#coresDisponiveis img:hover{
+    filter: opacity(0.7)
+}
+
