--- a/home.css
+++ b/home.css
@@ -452,6 +452,8 @@ a{
     align-items: center;
     gap: 5px;
     box-shadow: 1px 1px 10px rgb(0, 0, 0,0.6);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 #mensagemInput{
