--- a/assistencia24hs/css/body.css
+++ b/assistencia24hs/css/body.css
@@ -14,6 +14,7 @@ body{
     flex-direction: column;
     background-image: url(../imgs/background.jpg);
     position: fixed;
+    height: 100%;
 }
 
 .container{
@@ -21,11 +22,11 @@ body{
     scroll-snap-type: y mandatory;
     overflow-y: scroll;
     overflow-x: hidden;
-    height: 950px;
+    height: 100%;
     width: 70%;
     flex-direction: column;
     z-index: 2;
-    box-shadow: 1px 1px 10px black;
+    box-shadow: 1px 1px 100px black;
 }
 
 #divIntro{
@@ -38,7 +39,6 @@ body{
     height: 950px;
     width: 100%;
     font-size: 50px;
-   
     gap: 140px;
 }
 
@@ -51,18 +51,21 @@ body{
     text-align: center;
     align-items: center;
     width: 100%;
-    height: 500px;
+    height: 510px;
     border: 1px solid black;
+    background-color: rgb(0, 20, 45);
+    color: white;
 }
 
 
 #acionarFord{
     padding-left: 10px;
-    height: 950px;
     display: flex;
     flex-direction: column;
-    gap: 100px;
-    justify-content: center;
+    gap: 120px;
+    justify-content: center; 
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 #acionarFord h1{
@@ -83,11 +86,77 @@ body{
     justify-content: center;
     text-align: left;
     padding-left: 100px;
-    gap: 60px;
+    gap: 100px;
     
    
 }
 
 #listaInfo{
     padding-left: 50px;
+}
+
+#secaoServicos{
+    background-color: rgb(0, 20, 45);
+    color: white;
+}
+
+#servicosHeader{
+    border-bottom: 3px solid;
+    font-size: 50px;
+    padding: 10px;
+}
+
+#servicosPrestados{
+    display: flex;
+    flex-direction: column;
+    gap: 60px;
+    padding-top: 50px;
+    padding: 10px;
+}
+
+#cadaServico{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#servicosPrestados h2{
+    font-size: 35px;
+}
+
+#servicosPrestados h3{
+    font-size: 20px;
+}
+
+#secaoNormas h1{
+    font-size: 50px;
+}
+
+#secaoNormas h3{
+    font-size: 25px;
+}
+
+#normas{
+    display: flex;
+    flex-direction: column;
+    gap: 200px;
+    padding: 10px;
+}
+
+.cadaNorma{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+#naoCobertos{
+padding-left: 10px;
+}
+
+#normas-footer{
+    padding-top: 10px;
+    height: 950px;
+    display: flex;
+    flex-direction: column;
+    gap: 430px;
 }
