--- a/assistencia24hs/css/header.css
+++ b/assistencia24hs/css/header.css
@@ -84,7 +84,7 @@
     position: relative;
     transition: 1s;
     z-index: 3;
-    box-shadow: 1px 1px 10px black;
+    box-shadow: 1px 1px 10px rgb(0, 0, 0,0.5);
     background-color: white;
     color: rgb(0, 20, 45);
 }
