--- a/assistencia24hs/css/body.css
+++ b/assistencia24hs/css/body.css
@@ -1,11 +1,12 @@
 .secoes{
-    height: 950px;
+    height: 100%;
     width: 100%;
-    scroll-snap-align: end;
+    scroll-snap-align: start;
 }
 
 body{
     overflow: hidden;
+    
 }
 
 .outsideContainer{
@@ -109,7 +110,7 @@ body{
 #servicosPrestados{
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 50px;
     padding-top: 50px;
     padding: 10px;
 }
@@ -141,6 +142,7 @@ body{
     flex-direction: column;
     gap: 200px;
     padding: 10px;
+    height: 950px;
 }
 
 .cadaNorma{
@@ -150,7 +152,7 @@ body{
 }
 
 #naoCobertos{
-padding-left: 10px;
+    padding-left: 10px;
 }
 
 #normas-footer{
