--- a/home.css
+++ b/home.css
@@ -598,6 +598,23 @@ a{
     align-items: center;
 }
 
+#modalAlerta{
+    position: fixed;
+    display: none;
+    z-index: 3;
+    width: 400px;
+    height: 200px;
+    right: 20px;
+    bottom: 20px;
+    background-color: rgba(255, 0, 0);
+    color: white;
+    backdrop-filter: blur(10px);
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+}
+
 #modalConteudoFeedback{
     width: 700px;
     height: 800px;
@@ -661,4 +678,9 @@ a{
     border: 1px solid white;
     border-radius: 100px;
     color: white;
+}
+
+#botaoEnviarFeedback:disabled{
+    opacity: 0.7;
+    background-color: gray;
 }
