--- a/home.css
+++ b/home.css
@@ -104,7 +104,8 @@ button:hover{
     position: absolute;
     top: 10vh;
     background-color: white;
-    height: 200px;
+    height: 170px;
+    width: 200px;
     gap: 5vh;
     border: 5px solid white;
     border-radius: 5px;
@@ -157,7 +158,7 @@ button:hover{
     border: 0px;
     font-size: large;
     border-bottom: 2px solid gray;
-    width: 100%;
+    width: 180px;
     background-color: transparent;
     color: gray;
 }
@@ -515,6 +516,7 @@ a{
     border-radius: 100px;
     background-color:rgb(0, 20, 45);
     border: 1px solid;
+    box-shadow: 1px 1px 10px rgb(0, 0, 0, 0.5);
 }
 
 #botaoChat:hover{
