--- a/veiculos/css/header.css
+++ b/veiculos/css/header.css
@@ -141,14 +141,21 @@
     color: rgb(148, 96, 193) ;
 }
 
+.botoesVeiculos:focus{
+    border: 0px;
+    border-bottom: 3px solid rgb(148, 96, 193);
+    color: rgb(148, 96, 193);
+}
+
 .divVeiculos{
+    display: none;
     width: 90vh;
     background-color: white;
-    display: flex;
     justify-content: left;
     flex-wrap: wrap;
     gap: 10px;
 }
+
 
 .divCadaItem{
     height: min-content;
