--- a/home.css
+++ b/home.css
@@ -561,8 +561,12 @@ a{
 
 #messageConnectedElement{
     position: relative;
-    background-color: white;
+    background-color: rgb(60, 255, 0);
+    width: max-content;
+    border-radius: 10px;
+    padding: 20px;
     box-shadow: 1px 1px 10px rgb(0, 0, 0,0.5);
+    text-transform: uppercase;
 }
 
 #messageDisconnectedElement{
@@ -570,8 +574,10 @@ a{
     background-color: rgb(255, 0, 0);
     width: max-content;
     border-radius: 10px;
-    padding: 10px;
+    padding: 20px;
     box-shadow: 1px 1px 10px rgb(0, 0, 0,0.5);
+    color: white;
+    text-transform: uppercase;
 }
 
 .ativado{
