--- a/home.css
+++ b/home.css
@@ -145,6 +145,7 @@ button:hover{
     width: 100%;
     background-color: transparent;
     color: gray;
+    justify-content: center;
 }
 
 .botoesLogin:hover{
