--- a/usuario_cadastrado/usuario_cadastrado.css
+++ b/usuario_cadastrado/usuario_cadastrado.css
@@ -1,8 +1,76 @@
-.input_dados{
-    width: 250px;
+.botoes{
+    
+    width: 90px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: white;
+    border: solid 1px;
+    background-color: rgb(0, 20, 45);
+    border-radius: 5px;
+    transition: all 80ms ease-in-out;
+}
+#botaoPaginaInicial{
+    width: 184px;
+}
+.dados{
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+.dados label{
+    position: relative;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: rgb(40, 40, 40);
+}
+.dados input{
+    position: relative;
+    height: 35px;
+    border: solid 1.5px;
+    height: 40px;
+    width: 350px;
+    font-size: 15px;
+    padding: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border-color: rgb(40, 40, 40);
 }
 #container{
     display: flex;
     flex-direction: column;
     padding: 5px;
+    align-items: center;
+    border: solid 2px;
+}
+#dadosCEP{
+    display: flex;
+    gap: 10px;
+    margin: 10px;
+}
+#inputCEP label{
+    position: relative;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    color: rgb(40, 40, 40);
+}
+#dadosCEP input{
+    width: 100px;
+    position: relative;
+    height: 35px;
+    border: solid 1.5px;
+    font-size: 15px;
+    padding: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border-color: rgb(40, 40, 40);
+}
+#containerBotoes{
+    display: flex;
+    flex-direction: column;
+    align-items:center ;
+}
+#botoes_EditarConfirmar{
+    display: flex;
+    
 }
