--- a/usuario_cadastrado/usuario_cadastrado.css
+++ b/usuario_cadastrado/usuario_cadastrado.css
@@ -1,6 +1,21 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+#divSuaConta{
+    float: left;
+    writing-mode: vertical-lr;
+    rotate: 180deg;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    background-color: rgb(148, 96, 193);
+    color: white;
+}
+
 .botoes{
-    
-    width: 90px;
+    width: 180px;
     height: 35px;
     justify-content: center;
     align-items: center;
@@ -8,55 +23,100 @@
     font-size: 15px;
     color: white;
     border: solid 1px;
-    background-color: rgb(0, 20, 45);
+    background-color: rgb(148, 96, 193);
     border-radius: 5px;
     transition: all 80ms ease-in-out;
 }
-#botaoPaginaInicial{
-    width: 184px;
+
+.botoes:hover{
+    cursor: pointer;
+    opacity: 0.7;
 }
+
+
+#containerDadosUsuario{
+    height: 100%;
+    width: 100%;
+    box-shadow: 1px 1px 10px rgb(0, 0, 0,0.5);
+    padding: 20px;
+    background-color: rgb(0, 20, 45);
+    color: white;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+#botaoPaginaInicial{
+    width: 400px;
+}
+
 .dados{
     display: flex;
     flex-direction: column;
     gap: 1px;
 }
+
 .dados label{
     position: relative;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    color: rgb(40, 40, 40);
+    font-size: 25px;
+    color: white;
+
 }
+
 .dados input{
     position: relative;
     height: 35px;
     border: solid 1.5px;
     height: 40px;
-    width: 350px;
+    width: 400px;
     font-size: 15px;
     padding: 10px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border-color: rgb(40, 40, 40);
+    background-color: rgb(148, 96, 193);
+    color: white;
 }
+
+.dados input:disabled{
+    background-color: rgb(82, 58, 103);
+    color: black;
+}
+
 #container{
     display: flex;
-    flex-direction: column;
-    padding: 5px;
+    /* flex-direction: column; */
+    width: 100%;
+    border: 1px;
     align-items: center;
     border: solid 2px;
+    height: 100vh;
+    justify-content: left;
+    box-shadow: 1px 1px 10px black;
 }
+
+#container h2{
+    font-size: 50px;
+}
+
 #dadosCEP{
     display: flex;
     gap: 10px;
     margin: 10px;
 }
+
 #inputCEP label{
     position: relative;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 15px;
     color: rgb(40, 40, 40);
 }
+
 #dadosCEP input{
-    width: 100px;
+    width: 120px;
     position: relative;
     height: 35px;
     border: solid 1.5px;
@@ -65,11 +125,18 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border-color: rgb(40, 40, 40);
 }
+
+#dadosCEP input:disabled{
+    color: gray;
+}
+
 #containerBotoes{
     display: flex;
     flex-direction: column;
-    align-items:center ;
+    align-items: center;
+    gap: 10px;
 }
+
 #botoes_EditarConfirmar{
     display: flex;
     
