--- a/usuario_cadastrado/usuario_cadastrado.css
+++ b/usuario_cadastrado/usuario_cadastrado.css
@@ -9,9 +9,11 @@
     rotate: 180deg;
     height: 100%;
     justify-content: center;
+    padding: 10px;
     display: flex;
     background-color: rgb(148, 96, 193);
     color: white;
+    box-shadow: 1px 1px 10px black;
 }
 
 .botoes{
@@ -41,7 +43,6 @@
     padding: 20px;
     background-color: rgb(0, 20, 45);
     color: white;
-    gap: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,7 +65,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 25px;
     color: white;
-
+    
 }
 
 .dados input{
@@ -79,6 +80,7 @@
     border-color: rgb(40, 40, 40);
     background-color: rgb(148, 96, 193);
     color: white;
+    border-radius: 10px;
 }
 
 .dados input:disabled{
@@ -88,7 +90,6 @@
 
 #container{
     display: flex;
-    /* flex-direction: column; */
     width: 100%;
     border: 1px;
     align-items: center;
@@ -124,10 +125,12 @@
     padding: 10px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border-color: rgb(40, 40, 40);
+    border-radius: 10px;
 }
 
 #dadosCEP input:disabled{
-    color: gray;
+    background-color: rgb(82, 58, 103);
+    color: black;
 }
 
 #containerBotoes{
