--- a/home.css
+++ b/home.css
@@ -547,6 +547,7 @@ a{
     border-radius: 10px;
     padding: 10px;
     box-shadow: 1px 1px 10px rgb(0, 0, 0,0.5);
+    max-width: 300px;
 }
 
 #messageSelfElement{
