--- a/tabelaFipe/fipe.css
+++ b/tabelaFipe/fipe.css
@@ -24,16 +24,54 @@
     border: 1px solid;
     background-color: rgb(148, 96, 193);
     color: black;
-    box-shadow: 5px 5px 1px white;
     transition: .5s;
 }
 
+#sobreFipe{
+    width: 900px;
+    padding: 10px;
+    background-color:rgb(255, 255, 255);
+    border-radius: 20px;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
+.botoesFipeInfo{
+    width: 900px;
+    height: 50px;
+    background-color: rgb(148, 96, 193);
+    color: rgb(255, 255, 255);
+    border: 0;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    font-size: large;
+}
+
+.botoesFipeInfo:hover{
+  cursor: pointer;
+}
+
+.setas{
+    margin-left: auto;
+    height: 50px;
+    width: 30px;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(2%) hue-rotate(47deg) brightness(103%) contrast(101%);
+}
+
+.infos{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
 #divRetornar:hover{
     cursor: pointer;
     color: rgb(0, 0, 0);
-    box-shadow: 0px 0px 0px white;
 }
 
 #divTotal{
@@ -43,8 +81,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 1000px;
-    gap: 10px;
+    height: 100%;
+    gap: 100px;
     padding-bottom: 20px;
     background-color: rgb(0, 20, 45);
     color: white;
@@ -62,7 +100,6 @@
     overflow: auto;
     background-color: rgb(148, 96, 193);
     color: rgb(0, 20, 45);
-    box-shadow: 10px 10px 1px white;
     border-radius: 10px;
 }
 
@@ -89,6 +126,7 @@
 
 .botoesOpcoes:hover{
    opacity: 0.8;
+   cursor: pointer;
    scale: 1.1;
 }
 
@@ -120,6 +158,7 @@
     border: 1px solid;
     background-color: white;
     text-align: center;
+    border-radius: 10px;
 }
 
 .divCadaVeiculo:hover{
@@ -130,6 +169,8 @@
 .imgVeiculos{
     height: 300px;
     width: 400px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 button img{
     width: 100px;
@@ -239,4 +280,15 @@ button img{
 
 #fecharModal:hover{
   cursor: pointer;
+}
+
+.desativado{
+    display: none;
+}
+.ativado{
+    display: block;
+}
+
+.rodar{
+    transform: rotateX(180deg);
 }
