--- a/tabelaFipe/fipe.css
+++ b/tabelaFipe/fipe.css
@@ -10,11 +10,13 @@
     text-align: center;
     align-items: center;
     height: 100px;
-    background-color: rgb(148, 96, 193);
+    background-color: rgb(0, 20, 45);
+    box-shadow: 1px 1px 10px black;
 }
 
 #logo{
     height: 150px;
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7469%) hue-rotate(0deg) brightness(126%) contrast(94%);
 }
 
 #divRetornar{
@@ -22,17 +24,17 @@
     padding: 10px;
     border-radius: 10px;
     border: 1px solid;
-    background-color: rgb(148, 96, 193);
-    color: black;
+    background-color: rgb(0, 20, 45);
+    color: rgb(255, 255, 255);
     transition: .5s;
 }
 
 #sobreFipe{
     width: 900px;
     padding: 10px;
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(0, 20, 45);
     border-radius: 20px;
-    color: black;
+    color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -41,9 +43,9 @@
 .botoesFipeInfo{
     width: 900px;
     height: 50px;
-    background-color: rgb(148, 96, 193);
+    background-color: rgb(0, 20, 45);
+    border: 1px solid white;
     color: rgb(255, 255, 255);
-    border: 0;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -82,9 +84,9 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    gap: 100px;
+    gap: 20px;
     padding-bottom: 20px;
-    background-color: rgb(0, 20, 45);
+    background-color: rgb(167, 136, 194);
     color: white;
 }
 
@@ -96,10 +98,9 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 100px;
     overflow: auto;
-    background-color: rgb(148, 96, 193);
-    color: rgb(0, 20, 45);
+    background-color: rgb(0, 20, 45);
+    color: rgb(255, 255, 255);
     border-radius: 10px;
 }
 
@@ -186,11 +187,14 @@ button img{
     height: 100%;
     justify-content: center;
     align-items: center;
-
+    backdrop-filter: blur(100px);
+   
 }
 
 #modalConteudo{
-    background-color: rgb(148, 96, 193);
+    background-color: rgb(0, 20, 45);
+    box-shadow: 1px 1px 10px white;
+    color: white;
     width: 1200px;
     height: 800px;
     border-radius: 20px;
@@ -225,7 +229,7 @@ button img{
     height: 94%;
     width: 570px;
     overflow: auto;
-    padding-left: 10px;
+    padding-left: 50px;
 }
 
 #divModelosVeiculo h2:hover{
@@ -246,9 +250,12 @@ button img{
 }
 
 #modalAnosConteudo{
-    background-color: rgb(148, 96, 193);
-    width: 300px;
-    height: 800px;
+    background-color: rgb(0, 20, 45);
+    color: white;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255);
+    width: 250px;
+    overflow-y: auto;
+    height: 400px;
     border-radius: 20px;
     display: flex;
     align-items: center;
