--- a/veiculos/css/header.css
+++ b/veiculos/css/header.css
@@ -135,6 +135,11 @@
     border-radius: 10px;
 }
 
+.imgVeiculos:hover{
+    opacity: 0.7;
+    
+}
+
 .botoesVeiculos:hover{
     border: 0px;
     border-bottom: 3px solid rgb(148, 96, 193);
