--- a/cadastro/pagina_login.css
+++ b/cadastro/pagina_login.css
@@ -3,6 +3,10 @@ body {
     overflow: hidden;
 }
 
+.input_login::placeholder{
+    color: blue;
+}
+
 .input_login::-webkit-inner-spin-button{
     -webkit-appearance: none;
 }
@@ -41,6 +45,13 @@ body {
     border-radius: 5px;
     transition: all 80ms ease-in-out;
 }
+
+
+.button_login:hover{
+   cursor: pointer;
+   opacity: 0.9;
+}
+
 ::-webkit-scrollbar{
     width: 7px;
     border-top-right-radius: 4px;
